--- a/src/main/resources/templates/fragments/footer.html
+++ b/src/main/resources/templates/fragments/footer.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <div th:fragment="footer">
-    <div style="font-family: arial; text-align: center;">
+    <div class="footer">
         Financial Expense Analyzer
     </div>
 </div>
