--- a/src/main/resources/templates/data.html
+++ b/src/main/resources/templates/data.html
@@ -2,150 +2,163 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Financial Expense Analyzer</title>
-    <link th:href="@{/styles/main.css}" rel="stylesheet" />
+    <link th:href="@{/styles/data.css}" rel="stylesheet" />
+    <link th:href="@{/styles/general.css}" rel="stylesheet" />
 </head>
 <body>
 
-
-<div style="float: left">
-    <div th:replace="~{fragments/menu :: menu}">Menu</div>
-</div>
-
-<div th:replace="~{fragments/header :: header}">Header</div>
-
-<div class="pagebody">
-
-    <div class="pageheader">
-        Data Cleanup
+    <!-- Header / Masthead -->
+    <div class="row">
+        <div class="col-12">
+            <div th:replace="~{fragments/header :: header}">Header</div>
+        </div>
     </div>
 
-    <div class="deleteMonthPanel">
-        <form id="deleteTimePeriod" action="#" th:action="@{/dataDeleteMonth}" th:object="${dataCleanup}" method="post"
-              onsubmit="return confirm('This operation cannot be undone. Are you sure?');">
-            Select month to delete:
-            <select class="dataEntryCatOver" th:name="monthToDelete">
-                <option th:each="month : ${availableMonths}" th:value="${month.year + '/' + month.month + '/1'}" th:text="${month.month + '-' + month.year}" />
-            </select>
-            <button type="submit" class="standardButton">Delete</button>
-        </form>
-    </div>
+    <!-- Main content row -->
+    <div class="row">
 
-
-    <hr />
-
-    <div class="pageheader">
-        Data Entry
-
-        <form id="addExpenseFormId" action="#" th:action="@{/data}" th:object="${newExpenseRecord}" method="post" >
-            <div class="dataEntryPanel">
-
-                <div class="dataEntryError">
-                    <span th:if="${errorMsg ne null}" th:text="${errorMsg}" />
-                </div>
-
-                <div class="dataEntryLabel">
-                    <div>Date</div>
-                    <input class="dataEntryDateOfTr" type="text" th:field="*{transactionDate}" title="Date of transaction" />
-                </div>
-                <div class="dataEntryLabel">
-                    <div>Description</div>
-                    <input class="dataEntryDesc" type="text" th:field="*{description}"  title="Description of transaction" />
-                </div>
-                <div class="dataEntryLabel">
-                    <div>Check<br />Number</div>
-                    <input class="dataEntryCheckNum" type="text" th:field="*{checkNumber}"  title="Check number used in transaction" />
-                </div>
-                <div class="dataEntryLabel">
-                    <div>Amount</div>
-                    <input class="dataEntryAmt" type="text" th:field="*{amount}"  title="Amount of transaction" />
-                </div>
-                <div class="dataEntryLabel">
-                    <div>Category</div>
-                    <select class="dataEntryCatOver" th:field="*{categoryIdOverride}"  title="Category to assign to">
-                        <option value="-1">Automatic</option>
-                        <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}" />
-                    </select>
-                </div>
-                <div class="dataEntryLabel">
-                    <button type="submit" class="standardButton">Add</button>
-                </div>
-
-
-
-
-            </div>
-        </form>
-
-    </div>
-
-    <hr />
-
-    <div class="pageheader">
-        Upload Data File
-    </div>
-
-    <div class="fileUploadSelectPanel">
-        <form id="uploadFileForm" action="#" th:action="@{/dataupload}" enctype="multipart/form-data" method="post">
-
-            <div class="dataEntryError">
-                <span th:if="${uploadError ne null}" th:text="${uploadError}" />
-            </div>
-
-            <div class="fileUploadFileSelect">
-                Select file:
-                <input type="file" id="recordsFile" name="recordsFile">
-            </div>
-            <div class="fileUploadSelectInterpreter">
-                Select interpreter:
-                <select>
-                    <option value="0">Fifth Third Exported Transaction CSV File</option>
-                </select>
-            </div>
-            <div>
-                <button type="submit" class="standardButton">Upload</button>
-            </div>
-
-        </form>
-
-        <div class="importPreviewPanel" th:if="${preview ne null}">
-
-            <form id="approveImportId" action="#" th:action="@{/dataapprove}" th:object="${preview}" method="post" >
-
-                <input type="hidden" th:field="${preview}" />
-
-                <div class="dataEntryError">
-                    <div th:each="warning : ${preview.warnings}" th:text="${warning}" />
-                </div>
-
-                <div class="reportCategoryRecordPanel" th:each="record : ${preview.records}">
-
-                    <div class="recordItemTrDt" th:text="${record.transactionDate}" />
-
-                    <div class="recordItemDesc" th:text="${record.description}" />
-
-                    <div class="recordItemAmt" th:text="${record.amount}" />
-
-                    <div class="recordItemChkNum" th:text="${record.checkNumber}" />
-
-                </div>
-
-                <div>
-                    <!-- <button type="submit" class="standardButton">Import Data</button> -->
-                </div>
-
-            </form>
-
+        <!-- Menu -->
+        <div class="col-2 col-m-3 col-s-4">
+            <div th:replace="~{fragments/menu :: menu}">Menu</div>
         </div>
 
+        <!-- Main Body -->
+        <div class="col-10 col-m-9 col-s-8" style="">
+            <div class="pagebody">
+
+                <div class="pageheader">
+                    Data Cleanup
+                </div>
+
+                <div class="deleteMonthPanel">
+                    <form id="deleteTimePeriod" action="#" th:action="@{/dataDeleteMonth}" th:object="${dataCleanup}" method="post"
+                          onsubmit="return confirm('This operation cannot be undone. Are you sure?');">
+                        Select month to delete:
+                        <select class="dataEntryCatOver" th:name="monthToDelete">
+                            <option th:each="month : ${availableMonths}" th:value="${month.year + '/' + month.month + '/1'}" th:text="${month.month + '-' + month.year}" />
+                        </select>
+                        <button type="submit" class="standardButton">Delete</button>
+                    </form>
+                </div>
+
+
+                <hr />
+
+                <div class="pageheader">
+                    Data Entry
+                </div>
+
+                <form id="addExpenseFormId" action="#" th:action="@{/data}" th:object="${newExpenseRecord}" method="post" >
+                    <div class="dataEntryPanel">
+
+                        <div class="dataEntryError">
+                            <span th:if="${errorMsg ne null}" th:text="${errorMsg}" />
+                        </div>
+
+                        <div class="dataEntryLabel">
+                            <div>Date</div>
+                            <input class="dataEntryDateOfTr" type="text" th:field="*{transactionDate}" title="Date of transaction" />
+                        </div>
+                        <div class="dataEntryLabel">
+                            <div>Description</div>
+                            <input class="dataEntryDesc" type="text" th:field="*{description}"  title="Description of transaction" />
+                        </div>
+                        <div class="dataEntryLabel">
+                            <div>Check<br />Number</div>
+                            <input class="dataEntryCheckNum" type="text" th:field="*{checkNumber}"  title="Check number used in transaction" />
+                        </div>
+                        <div class="dataEntryLabel">
+                            <div>Amount</div>
+                            <input class="dataEntryAmt" type="text" th:field="*{amount}"  title="Amount of transaction" />
+                        </div>
+                        <div class="dataEntryLabel">
+                            <div>Category</div>
+                            <select class="dataEntryCatOver" th:field="*{categoryIdOverride}"  title="Category to assign to">
+                                <option value="-1">Automatic</option>
+                                <option th:each="category : ${categories}" th:value="${category.id}" th:text="${category.name}" />
+                            </select>
+                        </div>
+                        <div class="dataEntryLabel">
+                            <button type="submit" class="standardButton">Add</button>
+                        </div>
+
+                    </div>
+                </form>
+
+                <hr />
+
+                <div class="pageheader">
+                    Upload Data File
+                </div>
+
+                <div class="fileUploadSelectPanel">
+                    <form id="uploadFileForm" action="#" th:action="@{/dataupload}" enctype="multipart/form-data" method="post">
+
+                        <div class="dataEntryError">
+                            <span th:if="${uploadError ne null}" th:text="${uploadError}" />
+                        </div>
+
+                        <div class="fileUploadFileSelect">
+                            Select file:
+                            <input type="file" id="recordsFile" name="recordsFile">
+                        </div>
+                        <div class="fileUploadSelectInterpreter">
+                            Select interpreter:
+                            <select>
+                                <option value="0">Fifth Third Exported Transaction CSV File</option>
+                            </select>
+                        </div>
+                        <div>
+                            <button type="submit" class="standardButton">Upload</button>
+                        </div>
+
+                    </form>
+
+                    <div class="importPreviewPanel" th:if="${preview ne null}">
+
+                        <form id="approveImportId" action="#" th:action="@{/dataapprove}" th:object="${preview}" method="post" >
+
+                            <input type="hidden" th:field="${preview}" />
+
+                            <div class="dataEntryError">
+                                <div th:each="warning : ${preview.warnings}" th:text="${warning}" />
+                            </div>
+
+                            <div class="reportCategoryRecordPanel" th:each="record : ${preview.records}">
+
+                                <div class="recordItemTrDt" th:text="${record.transactionDate}" />
+
+                                <div class="recordItemDesc" th:text="${record.description}" />
+
+                                <div class="recordItemAmt" th:text="${record.amount}" />
+
+                                <div class="recordItemChkNum" th:text="${record.checkNumber}" />
+
+                            </div>
+
+                            <div>
+                                <!-- <button type="submit" class="standardButton">Import Data</button> -->
+                            </div>
+
+                        </form>
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
     </div>
 
-</div>
-
-<div style="clear: both;"></div>
-
-<div th:replace="~{fragments/footer :: footer}">Footer</div>
-
+    <!-- Footer -->
+    <div class="row">
+        <div class="col-12">
+            <div th:replace="~{fragments/footer :: footer}">Footer</div>
+        </div>
+    </div>
 
 </body>
 </html>
